--- a/ui/pubspec.yaml
+++ b/ui/pubspec.yaml
@@ -20,6 +20,14 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  macos:
+    generate: true
+    image_path: "assets/icon.png"
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/icon.png
